Bug 8886 - No battery info with 2.6.23-rc3 kernels
Summary: No battery info with 2.6.23-rc3 kernels
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: EC (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alexey Starikovskiy
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-08-13 09:21 UTC by Christian Casteyde
Modified: 2008-10-17 21:32 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.23-rc3
Tree: Mainline
Subsystem:
Regression: ---


Attachments
dmesg for 2.6.22.1-cfs19, which works nice (16.75 KB, text/plain)
2007-08-13 09:22 UTC, Christian Casteyde
Details
dmesg for 2.6.23-rc3, which doesn't detect the battery (17.85 KB, text/plain)
2007-08-13 09:23 UTC, Christian Casteyde
Details
Undelete register query function (1.35 KB, patch)
2007-08-13 20:58 UTC, Alexey Starikovskiy
Details | Diff

Description Christian Casteyde 2007-08-13 09:21:03 UTC
Most recent kernel where this bug did not occur: 2.6.22.x
Distribution: Slackware 12
Hardware Environment: Athlon64 3000 + nForce3 150 on Aspire 1511 LMi
Software Environment: none
Problem Description:
With recent kernels (2.6.23-rc3, maybe 2.6.23-rc2 but I'm not sure), the battery information is not available anymore on some laptops.
Dmesg info for different kernel versions appended.

Steps to reproduce:
Maybe specific to my hardware. It used to have a DSDT replacement for old kernels (2.6.16 for instance), but since 2.6.19 up to 2.6.22 it was not necessary. Now, it does work with neither original nor fixed DSDT.
Comment 1 Christian Casteyde 2007-08-13 09:22:26 UTC
Created attachment 12366 [details]
dmesg for 2.6.22.1-cfs19, which works nice

Please note that even dmesg says battery absent, it ** is ** detected and usable through /proc/acpi/battery/BAT1/state and info.
Comment 2 Christian Casteyde 2007-08-13 09:23:29 UTC
Created attachment 12367 [details]
dmesg for 2.6.23-rc3, which doesn't detect the battery

The battery is not detected anymore in /proc/acpi/battery/BAT1/state, info and so.
Comment 3 Alexey Starikovskiy 2007-08-13 20:58:51 UTC
Created attachment 12369 [details]
Undelete register query function

Please check if this patch helps.
Comment 4 Len Brown 2007-08-13 22:18:29 UTC
patch in comment #3 checked into acpi tree.
Comment 5 Christian Casteyde 2007-08-14 01:43:25 UTC
I will test the patch today.

Moreover, I can confirm this is a 2.6.23-rc3 regression (2.6.23-rc2 still works).
Comment 6 Christian Casteyde 2007-08-14 02:20:35 UTC
2.6.23-rc3+patch = OK
It now works.
Thanks a lot
Comment 7 Len Brown 2007-08-14 20:36:40 UTC
patch in comment #3 shipped in 2.6.23-rc3-git1
closed

Note You need to log in before you can comment on or make changes to this bug.